# eddy

./: .clang-tidy  CMakeLists.txt  CMakeUserPresets.json  README.md  config.yaml
.github/workflows/: build-multi-platform.yml
scripts/: build.sh  clang-tidy.sh  conan_install.sh  run.sh  setup_hooks.sh
scripts/git/hooks/: commit-msg
src/: CMakeLists.txt  Config.cpp  Config.hpp  Console.hpp  LanguageTools.hpp  main.cpp
src/Languages/: Cpp.hpp  Javascript.hpp  Language.hpp  LanguageFactory.hpp  Python.hpp
